syntax = "proto3";

package account;

import "common/common.proto";
import "google/protobuf/empty.proto";

option go_package = "gateway-service/client/account";
option java_package = "com.market.account";
option java_multiple_files = true;

service UserService {
  rpc ListUsers(ListUsersRequest) returns (common.PageResponse) {};
  rpc ListUsersByEmail(common.FindByCodeRequest) returns (common.ListResponse) {};
  /**
   * This API returns list of active users that can be used as notification recipient
   */
  rpc GetUser(common.FindByCodeRequest) returns (GetUserResponse) {};

  rpc CreateUser(UpsertUserRequest) returns (common.NoContentResponse) {};

  rpc UpdateUser(UpsertUserRequest) returns (common.NoContentResponse) {};

  rpc DeleteUser(common.FindByCodeRequest) returns (common.NoContentResponse) {};

  rpc GetCurrentUser(google.protobuf.Empty) returns (GetCurrentUserResponse) {};

}

message User {
  string user_id = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
  string email = 5;
  common.Status status = 6;
  repeated string market_codes = 7;
  repeated string roles = 8;
  repeated string role_ids = 9;
  repeated string role_codes = 10;
  repeated string permissions = 11;
}

message ListUsersRequest {
  common.PageRequest page_request = 1;
  string search_term = 2;
  optional common.Status status = 3;
  repeated string role_ids = 4;
  bool include_public = 5;
}

message GetUserResponse {
  message Data {
    User user = 1;
  }

  bool success = 1;
  oneof response {
    Data data = 2;
    common.Error error = 3;
  }
}

message UpsertUserRequest {
  // Insert only
  string email = 1;
  string user_id = 2;

  string first_name = 3;
  string last_name = 4;
  string middle_name = 5;
  common.Status status = 6;
  repeated string role_ids = 7;
  repeated string market_codes = 8;

  //  repeated market.MarketType divisions = 17;
}

message GetCurrentUserResponse {
  message Data {
    User user = 1;
  }

  bool success = 1;
  oneof response {
    Data data = 2;
    common.Error error = 3;
  }
}
